# inline-sql-zed

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SUBMISSION.md  extension.toml
.github/workflows/: ci.yml  release.yml
.zed/: settings.json
examples/: .sqruff  multiline.go  zed-settings.jsonc
server/: Cargo.toml
server/src/: config.rs  main.rs  sql.rs
src/: lib.rs
