[package]
name = "inline-sql-lsp"
version = "0.1.1"
edition = "2021"
publish = false
authors = ["Roman Kabaev"]
license = "MIT"
repository = "https://github.com/KabaevRoman/inline-sql-zed"
homepage = "https://github.com/KabaevRoman/inline-sql-zed"
readme = "../README.md"

[dependencies]
regex = "1.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
strip = true
